# servers

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: daily-release-check.yml  main.yml  python.yml  release-check.yml  release.yml  typescript.yml  version-check.yml  weekly-release.yml
scripts/: release.py
src/aws-kb-retrieval-server/: Dockerfile  README.md  index.ts  package.json  tsconfig.json
src/brave-search/: Dockerfile  README.md  index.ts  package.json  tsconfig.json
src/click/: README.md  pyproject.toml
src/click/src/mcp_server_click/: __init__.py  __main__.py  example.py  parse.py  server.py
src/datagen/: README.md  pyproject.toml
src/datagen/src/mcp_server_datagen/: __init__.py  __main__.py  generators.py  server.py  synthetic.py
src/datagen/tests/unit/: test_insurance_data.py  test_server.py  test_synthetic.py
src/duckduckgo/: README.md  index.ts  package.json
src/everart/: Dockerfile  README.md  index.ts  package.json
src/everything/: Dockerfile  README.md  everything.ts  package.json
src/fetch/: Dockerfile  README.md  pyproject.toml
src/fetch/src/mcp_server_fetch/: __init__.py  __main__.py  server.py
src/filesystem/: Dockerfile  README.md  index.ts  package.json
src/gdrive/: Dockerfile  README.md  index.ts  package.json  replace_open.sh  tsconfig.json
src/git/: Dockerfile  README.md  pyproject.toml
src/git/src/mcp_git/: __init__.py  __main__.py
src/git/src/mcp_server_git/: __init__.py  __main__.py  server.py
src/git/tests/: test_server.py
src/github/: Dockerfile  README.md  index.ts  interfaces.ts  package-lock.json  package.json  schemas.ts
src/github/common/: errors.ts  types.ts  utils.ts  version.ts
src/github/operations/: branches.ts  commits.ts  files.ts  issues.ts  pulls.ts  repository.ts  search.ts
src/gitlab/: Dockerfile  README.md  index.ts  package-lock.json  package.json  schemas.ts
src/google-maps/: Dockerfile  README.md  index.ts  package.json
src/memory/: Dockerfile  README.md  index.ts  package.json  tsconfig.json
src/mysql/: README.md  index.js  index.ts  package.json  pnpm-lock.yaml
src/postgres/: Dockerfile  README.md  index.ts  package.json
src/puppeteer/: Dockerfile  README.md  index.ts  package.json
src/redis/: Dockerfile  README.md  package.json
src/redis/src/: index.ts
src/sentry/: Dockerfile  README.md  pyproject.toml
src/sentry/src/mcp_server_sentry/: __main__.py  server.py
src/sequentialthinking/: Dockerfile  README.md  index.ts  package.json
src/slack/: Dockerfile  README.md  index.ts  package.json
src/sqlite/: Dockerfile  README.md  pyproject.toml
src/sqlite/src/mcp_server_sqlite/: __init__.py  server.py
src/sqlite/src/sqlite/: __init__.py  server.py
src/time/: Dockerfile  README.md  pyproject.toml
src/time/src/mcp_server_time/: __init__.py  __main__.py  server-resources.py  server.py
src/time/test/: time_server_test.py
