[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-datagen"
version = "0.1.0"
description = "MCP server for generating notional data using Python libraries"
requires-python = ">=3.12"
dependencies = [
    "faker>=20.1.0",
    "mimesis>=13.1.0",
    "numpy>=1.26.0",
    "sdv>=1.5.0",
    "pandas>=2.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "pyright>=1.1.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
