[project]
name = "mcp-server-sentry"
version = "0.4.1"
description = "MCP server for retrieving issues from sentry.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=0.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]

[project.scripts]
mcp-server-sentry = "mcp_server_sentry:main"
