[project]
name = "sqlite"
version = "0.1.0"
description = "A simple SQLite MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.1",
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sqlite = "sqlite:main"